--- a/templates/index.html
+++ b/templates/index.html
@@ -4,9 +4,23 @@
   <meta charset="UTF-8">
 </head>
 <body>
-  {{ 3 + 4 }}<br>
-  {{ 3 < 4 }}<br>
-  {{ 3 % 2 == 0 }}<br>
-  {{ True or False }}<br>
+  {{ number * 2 * 2 * 2  }}<br>
+
+  {% for i in lst %}
+    <h{{ i }}> Hello </h{{ i }}>
+
+    {% if i > 3 %}
+        <p> i > 3 </p>
+
+    {% elif i == 5 %}
+        <p> i == 5 </p>
+        {% else %}
+        <p> i <= 3 </p>
+        {% endif %}
+  {% else %}
+    <p> No items! </p>
+  {% endfor %}
+
+
 </body>
 </html>
