--- a/templates/add_news.html
+++ b/templates/add_news.html
@@ -7,20 +7,17 @@
   <hr>
   <form method="POST" action="" novalidate>
     {{ form.csrf_token }}
-
       <div class="form-group">
-        <label>
+        <label >
           {{ form.title.label }}
         </label>
         {{ form.title(class="form-control") }}
       </div>
-
       {% for error in form.title.errors %}
         <div class="alert alert-danger" role="alert">
           <span>{{ error }}</span>
         </div>
       {% endfor %}
-
       <div class="form-group">
         <label >
           {{ form.text.label }}
@@ -32,6 +29,12 @@
           <span>{{ error }}</span>
         </div>
       {% endfor %}
+      <div class="form-group">
+        <label >
+          {{ form.category.label }}
+        </label>
+        {{ form.category(class="form-control") }}
+      </div>
     {{ form.submit(class="btn btn-primary btn-lg") }}
   </form>
 {% endblock content %}
